# janus

./: .gitignore  .gitleaksignore  Cargo.toml  Dockerfile.engine  Dockerfile.engine.dockerignore  README.md  devenv.nix  flake.nix  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  go-envelope.yml  rust.yml  security.yml
browser-qa/: managed-secret-ux.spec.mjs  playwright.config.mjs  run-managed-browser-assurance.mjs
config/assurance/: adversarial-scenarios-v1.json  managed-service-ux-v1.json  minimization-proof-v1.json  rust-advisory-exceptions-v1.json  security-properties-v1.json  security-properties-v2.json  security-scanners-v1.json  source-release-signing-v1.json
config/authorization/: role-matrix-v1.json
config/migrations/: approval-registry-v0-v1.json.in  scope-transfer-v1.json.in
config/release-channels/: base-images-v1.json  v1.json
config/runtime-endpoints/: v1.json
contracts/: managed-service-secret-contract-v1.json  pharos-beacon-token-generation-v2.json
contrib/claude-code/: janus-hooks.settings.json
crates/janus-conformance/: Cargo.toml
crates/janus-conformance/proptest-regressions/: property_conformance.txt
crates/janus-conformance/src/: lib.rs
crates/janus-conformance/tests/: audit_durability.rs  delegation_conformance.rs  property_conformance.rs
crates/janus-core/: Cargo.toml
crates/janus-core/proptest-regressions/: security_properties.txt
crates/janus-core/src/: allowlist.rs  audit.rs  backend.rs  break_glass.rs  broker.rs  consumer.rs  delegation.rs  error.rs  lib.rs  managed_service.rs  manifest.rs  metadata.rs  migration.rs  minimization.rs  plane.rs  policy.rs  principal.rs  recovery.rs  refs.rs  release.rs  retention.rs  roles.rs  rotation.rs  scope.rs  stale.rs  store.rs  tombstone.rs  transfer.rs  types.rs  value.rs
crates/janus-core/tests/: property_replay_probe.rs  security_properties.rs
crates/janus-executor/: Cargo.toml
crates/janus-executor/src/: lib.rs  pharos_generation.rs
crates/janus-forge/: Cargo.toml
crates/janus-forge/src/: lib.rs
crates/janus-host/: Cargo.toml
crates/janus-host/src/: agent.rs  lib.rs  tests.rs
crates/janus-local/: Cargo.toml
crates/janus-local/src/: audit.rs  break_glass.rs  delegation.rs  lib.rs  migration.rs  recovery.rs  release.rs  retention.rs  roles.rs  transfer.rs
crates/janus-mcp/: Cargo.toml
crates/janus-mcp/src/: main.rs
crates/janus-mock/: Cargo.toml
crates/janus-mock/src/: lib.rs
crates/janus-provider-age/: Cargo.toml
crates/janus-provider-age/src/: lib.rs
crates/janus-providers/: Cargo.toml
crates/janus-providers/src/: lib.rs  secretspec.rs
crates/janus-vaultwarden/: Cargo.toml
crates/janus-vaultwarden/src/: client.rs  lib.rs  mapping.rs
crates/janus-warden/: Cargo.toml
crates/janus-warden/src/: lib.rs  main.rs
crates/janus-warden/tests/fixtures/: tool_catalog.snapshot.json
crates/janusd/: Cargo.toml
crates/janusd/src/: break_glass_admin.rs  claude_hook.rs  lib.rs  lifecycle_entry.rs  lifecycle_queue.rs  main.rs  migration.rs  pharos_retirement.rs  recovery.rs  retention.rs  role_admin.rs  scope_transfer.rs
crates/janusd/src/lifecycle_entry/: web_transaction.rs
docs/: break-glass-runbook.md  claude-code-hooks.md  codeql-merge-protection.md  delegation-runbook.md  destroy-lifecycle-runbook.md  env-file-handoff-runbook.md  extraction-cutover.md  managed-secret-ingress.md  managed-service-secret-contract.md  managed-web-transaction.md  migration-runbook.md  property-replay.md  release-admission.md  role-authorization.md
examples/env-file-handoff/: README.md  approved-use.env-file.toml.in  consumer-contract.md  metadata.toml  secretspec.toml
fixtures/migrations/approval-registry-v0/: appr_fixture.json
fixtures/release-admission/: development.json  trusted.json  unsigned.json
go-envelope/: Dockerfile  auth_witness.go  authorization.go  authorization_test.go  broker.go  go.mod  governance.go  janus_334_required_gate_test.go  main.go  main_test.go  managed_browser_assurance_test.go  managed_host_delivery.go  managed_operation_bridge.go  managed_operation_bridge_test.go  managed_secret_ingress.go  managed_secret_ingress_test.go  managed_setup_intents.go  managed_setup_intents_test.go  managed_transactions.go  managed_transactions_test.go  roles.go  supply_chain_posture.go  vault_ui.go  vault_ui_test.go
go-envelope/ui/: access.html  assurance.html  janus.css  ledger.html  managed-secret.html  newsecret.html  requests.html  settings.html  vault.html
scripts/: admit-engine-release.sh  assure-engine-release.sh  check-action-pins.py  check-docker-base-pins.py  check-engine-release-tag.sh  check-release-docs.py  check-rust-audit.py  check-security-gates.py  check-source-release.py  create-source-release-manifest.py  janus-340-codeql-proof.py  run-adversarial-scenarios.py  run-managed-service-ux-assurance.py  run-minimization-proof.py  run-security-gates.sh  run-security-properties.py  smoke-engine-container.sh  smoke-janusd-env-file.sh  smoke-janusd-lifecycle-entry.sh  smoke-janusd-lifecycle-queue.sh  smoke-janusd-migration.sh  smoke-janusd-pharos-retirement.sh  smoke-janusd-planes.sh  smoke-janusd-recovery-drill.sh  smoke-janusd-retention.sh  smoke-janusd-scope-transfer.sh  smoke-published-engine.sh  smoke-warden-mcp.py  test-docker-base-pins.py  test-gitleaks.sh  test-release-admission.sh
