# Janus — Rust engine workspace.
# The Go envelope (go-envelope/) is a separate Go module, intentionally NOT a
# workspace member. Licensed AGPL-3.0-only (matching the PAIMOS/INSPR family).
[workspace]
resolver = "2"
members = [
    "crates/janus-conformance",
    "crates/janus-core",
    "crates/janus-executor",
    "crates/janus-provider-age",
    "crates/janus-local",
    "crates/janus-warden",
    "crates/janus-forge",
    "crates/janus-mock",
    "crates/janus-providers",
    "crates/janusd",
]

[workspace.package]
version = "0.1.7"
edition = "2021"
rust-version = "1.80"
authors = ["Markus Barta <mba@barta.cm>"]
repository = "https://github.com/markus-barta/janus"
license = "AGPL-3.0-only"

[workspace.lints.rust]
unsafe_code = "forbid"
