[package]
name = "janus-conformance"
description = "Reusable Janus SecretStore contract tests."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
janus-core = { path = "../janus-core" }

[dev-dependencies]
janus-mock = { path = "../janus-mock" }
tokio = { version = "1", features = ["macros", "rt"] }
