[package]
name = "janus-core"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Janus core — VaultBackend trait, Janus-domain types, allowlist + audit logic. Backend-agnostic."

[dependencies]
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
# NB: janus-core itself does not depend on `secrecy` in v0. Field values
# are plain `String`; concealed protection is via redaction (None-ing the
# value) before serialization. The `secrecy` crate is used by
# janus-vaultwarden for the long-lived API client_secret, not here.
