[package]
name = "janus-core"
description = "Janus engine core: the async SecretStore trait, opaque SecretRef/UsePermit handles, policy + audit-as-evidence model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
