[package]
name = "janus-executor"
description = "Janus approved-use execution layer: consumes permits through reviewed profiles without returning secret literals."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fs2 = "0.4"
janus-core = { path = "../janus-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
janus-mock = { path = "../janus-mock" }
tokio = { version = "1", features = ["macros", "rt"] }
