[package]
name = "janus-forge"
description = "Janus rotation/write broker (admin + script facing): makes and rotates secrets. Not MCP, not LLM-driven."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
janus-core = { path = "../janus-core" }
janus-provider-age = { path = "../janus-provider-age" }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
