[package]
name = "janus-local"
description = "Local filesystem integrations for Janus runtimes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fs2 = "0.4"
hex = "0.4"
janus-core = { path = "../janus-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
janus-mock = { path = "../janus-mock" }
proptest = "=1.5.0"
tempfile = "3"
tokio = { version = "1", features = ["rt"] }
