[package]
name = "janus-mcp"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Janus-Warden — MCP server binary exposing a tag-allowlisted, read-only view of a vault to an LLM."

[[bin]]
name = "janus-mcp"
path = "src/main.rs"

[dependencies]
janus-core = { path = "../janus-core" }
janus-vaultwarden = { path = "../janus-vaultwarden" }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
secrecy.workspace = true

# TODO (JANUS-1 §13.1): pick an MCP SDK crate. Candidates:
#   - `rmcp`             (newer, may be official-blessed by 2026)
#   - `mcp-rust-sdk`     (community, more permissive)
# Eval feature parity + maintenance activity before first non-scaffold commit.
