[package]
name = "janus-mcp"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Janus-Warden — MCP server binary exposing a tag-allowlisted, read-only view of a vault to an LLM."

[[bin]]
name = "janus-mcp"
path = "src/main.rs"

[dependencies]
janus-core = { path = "../janus-core" }
janus-vaultwarden = { path = "../janus-vaultwarden" }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
secrecy.workspace = true

# Official Anthropic Rust MCP SDK — decision recorded in PAIMOS guideline
# architecture-v0 §13.1. The community alternative `mcp-rust-sdk` was
# archived 2025-07 and now redirects here. Feature-gated to keep the dep
# tree audit-friendly: stdio only, no HTTP/SSE/auth/reqwest. Pinned to an
# exact version for supply-chain hygiene; bumps require a code review.
rmcp = { version = "=1.7.0", default-features = false, features = ["server", "transport-io"] }
