[package]
name = "janus-mock"
description = "In-memory Janus SecretStore implementation for conformance and tracer tests."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
janus-core = { path = "../janus-core" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
