[package]
name = "janus-provider-age"
description = "Native age-backed janus-core::SecretStore for self-hosted Janus."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
age = { version = "=0.11.3", default-features = false, features = ["ssh"] }
async-trait = "0.1"
fs2 = "0.4"
janus-core = { path = "../janus-core" }
secretspec = { version = "=0.11.0", default-features = false }
tokio = { version = "1", features = ["rt"] }
zeroize = "1"

[dev-dependencies]
janus-conformance = { path = "../janus-conformance" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
