[package]
name = "janus-provider-age"
description = "Native age-backed janus-core::SecretStore for self-hosted Janus."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
age = { version = "=0.12.1", default-features = false, features = ["ssh"] }
async-trait = "0.1"
fs2 = "0.4"
janus-core = { path = "../janus-core" }
ssh-key = { version = "=0.6.7", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["rt"] }
zeroize = "1"

[dev-dependencies]
janus-conformance = { path = "../janus-conformance" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
