[package]
name = "janus-providers"
description = "Secretspec adapter for the Janus SecretStore contract."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
janus-core = { path = "../janus-core" }
secrecy = "0.10.3"
secretspec = { version = "=0.11.0", default-features = false }

[dev-dependencies]
janus-conformance = { path = "../janus-conformance" }
tokio = { version = "1", features = ["macros", "rt"] }
