[package]
name = "janus-providers"
description = "Secretspec adapter for the Janus SecretStore contract."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
dotenvy = "=0.15.7"
janus-core = { path = "../janus-core" }
secrecy = "0.10.3"

[dev-dependencies]
janus-conformance = { path = "../janus-conformance" }
proptest = "=1.5.0"
tokio = { version = "1", features = ["macros", "rt"] }
