[package]
name = "janus-warden"
description = "Janus reference-only MCP surface (read side): serves SecretRefs and brokers UsePermits to AI, never literals."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
janus-core = { path = "../janus-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
janus-mock = { path = "../janus-mock" }
tokio = { version = "1", features = ["macros", "rt"] }
