[package]
name = "janus-warden"
description = "Janus reference-only MCP surface (read side): serves SecretRefs and brokers UsePermits to AI, never literals."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "janus-warden"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.103"
async-trait = "0.1"
janus-core = { path = "../janus-core" }
janus-local = { path = "../janus-local" }
janus-provider-age = { path = "../janus-provider-age" }
janus-providers = { path = "../janus-providers" }
rmcp = { version = "=1.7.0", default-features = false, features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
janus-mock = { path = "../janus-mock" }
proptest = "=1.5.0"
tokio = { version = "1", features = ["macros", "rt"] }
