[package]
name = "janusd"
description = "The Janus daemon — wires the engine crates into the serving binary that will supersede the Go envelope."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
default-run = "janusd"

[lints]
workspace = true

[[bin]]
name = "janusd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
janus-core = { path = "../janus-core" }
janus-forge = { path = "../janus-forge" }
janus-provider-age = { path = "../janus-provider-age" }
janus-warden = { path = "../janus-warden" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
