[package]
name = "janusd"
description = "Janus approved-use runtime and operator CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
default-run = "janusd"

[lints]
workspace = true

[[bin]]
name = "janusd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
janus-core = { path = "../janus-core" }
janus-executor = { path = "../janus-executor" }
janus-forge = { path = "../janus-forge" }
janus-local = { path = "../janus-local" }
janus-provider-age = { path = "../janus-provider-age" }
janus-warden = { path = "../janus-warden" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
toml = "0.8"

[dev-dependencies]
janus-mock = { path = "../janus-mock" }
tempfile = "3"
