[package]
name = "janusd"
description = "Janus approved-use runtime and operator CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
default-run = "janusd"

[lints]
workspace = true

[[bin]]
name = "janusd"
path = "src/main.rs"
test = false

[[bin]]
name = "janusd-use"
path = "src/bin/janusd-use.rs"
test = false

[[bin]]
name = "janusd-admin"
path = "src/bin/janusd-admin.rs"
test = false

[[bin]]
name = "janusd-web-transactiond"
path = "src/bin/janusd-web-transactiond.rs"
test = false

[dependencies]
anyhow = "=1.0.103"
async-trait = "0.1"
base64 = "0.21"
fs2 = "0.4"
hex = "0.4"
janus-core = { path = "../janus-core" }
janus-executor = { path = "../janus-executor" }
janus-forge = { path = "../janus-forge" }
janus-local = { path = "../janus-local" }
janus-provider-age = { path = "../janus-provider-age" }
janus-warden = { path = "../janus-warden" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shell-words = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
zeroize = "1"

[dev-dependencies]
janus-mock = { path = "../janus-mock" }
proptest = "=1.5.0"
tempfile = "3"
